terraform/slave.tf

# data "aws_ami" "amazon-linux-2" {
#   most_recent = true
#   owners = ["amazon"]
#   filter {
#     name = "name"
#     values = [
#       "amzn2-ami-hvm-*-x86_64-gp2",
#     ]
#   }
#   filter {
#     name = "owner-alias"
#     values = [
#       "amazon",
#     ]
#   }
# }


# resource "aws_security_group" "sg_allow_ssh_jenkins" {
#   name        = "allow_ssh_jenkins_slave"
#   description = "Allow SSH and Jenkins inbound traffic"
#   vpc_id      = "${aws_vpc.development-vpc.id}"

#   ingress {
#     from_port   = 22
#     to_port     = 22
#     protocol    = "tcp"
#     cidr_blocks = ["0.0.0.0/0"]
#   }

#   ingress {
#     from_port   = 8080
#     to_port     = 8080
#     protocol    = "tcp"
#     cidr_blocks = ["0.0.0.0/0"]
#   }

#   egress {
#     from_port       = 0
#     to_port         = 0
#     protocol        = "-1"
#     cidr_blocks     = ["0.0.0.0/0"]
#   }
# }

# # resource "aws_iam_role" "test_role" {
# #   name = "ec2fullacc"

# #   assume_role_policy = <<EOF
# # {
# #   "Version": "2012-10-17",
# #   "Statement": [
# #     {
# #       "Action": "sts:AssumeRole",
# #       "Principal": {
# #         "Service": "ec2.amazonaws.com"
# #       },
# #       "Effect": "Allow",
# #       "Sid": ""
# #     }
# #   ]
# # }
# # EOF

# #   tags = {
# #       tag-key = "tag-value"
# #   }
# # }

# # resource "aws_iam_instance_profile" "test_profile" {
# #   name = "test_profile"
# #   role = "${aws_iam_role.test_role.name}"
# # }

# # resource "aws_iam_role_policy" "test_policy" {
# #   name = "test_policy"
# #   role = "${aws_iam_role.test_role.id}"

# #   policy = <<EOF
# # {
# #     "Version": "2012-10-17",
# #     "Statement": [
# #         {
# #             "Action": "ec2:*",
# #             "Effect": "Allow",
# #             "Resource": "*"
# #         },
# #         {
# #             "Effect": "Allow",
# #             "Action": "elasticloadbalancing:*",
# #             "Resource": "*"
# #         },
# #         {
# #             "Effect": "Allow",
# #             "Action": "cloudwatch:*",
# #             "Resource": "*"
# #         },
# #         {
# #             "Effect": "Allow",
# #             "Action": "autoscaling:*",
# #             "Resource": "*"
# #         },
# #         {
# #             "Effect": "Allow",
# #             "Action": "iam:CreateServiceLinkedRole",
# #             "Resource": "*",
# #             "Condition": {
# #                 "StringEquals": {
# #                     "iam:AWSServiceName": [
# #                         "autoscaling.amazonaws.com",
# #                         "ec2scheduled.amazonaws.com",
# #                         "elasticloadbalancing.amazonaws.com",
# #                         "spot.amazonaws.com",
# #                         "spotfleet.amazonaws.com",
# #                         "transitgateway.amazonaws.com"
# #                     ]
# #                 }
# #             }
# #         }
# #     ]
# # }
# # EOF
# # }


# resource "aws_instance" "jenkins-instance" {
#   ami             = "${data.aws_ami.amazon-linux-2.id}"
#   instance_type   = "t2.medium"
#   key_name        = "${var.keyname}"
#   #vpc_id          = "${aws_vpc.development-vpc.id}"
#   vpc_security_group_ids = ["${aws_security_group.sg_allow_ssh_jenkins.id}"]
#   subnet_id          = "${aws_subnet.public-subnet-1.id}"
#   #name            = "${var.name}"
#   user_data = "${file("install_jenkins.sh")}"
#    iam_instance_profile = aws_iam_instance_profile.test_profile.name

#   associate_public_ip_address = true
#   tags = {
#     Name = "Jenkins-Instance-slave"
#   }
# }


# output "jenkins_ip_address_slave" {
#   value = "${aws_instance.jenkins-instance.public_dns}"
# }
